// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should prioritize disabled over error styles 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_39"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_40"
      aria-invalid="true"
      class="circuit-5"
      disabled=""
      id="input_39"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should prioritize disabled over warning styles 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_43"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_44"
      class="circuit-5"
      disabled=""
      id="input_43"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render minRows props as rows when passed if rows is auto 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_55"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_56"
      class="circuit-5"
      id="input_55"
      rows="3"
      style="resize: none; overflow-y: hidden; height: auto;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render rows props when passed 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_47"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_48"
      class="circuit-5"
      id="input_47"
      rows="3"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-6 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: block;
  margin-top: 4px;
  color: var(--cui-fg-subtle);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_15"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_16"
      class="circuit-5"
      id="input_15"
    />
  </div>
  <span
    class="circuit-6"
    id="validation-hint_16"
  >
    Validation hint
  </span>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with a prefix when passed the prefix prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-6::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-6:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-6:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_7"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <div
      class="circuit-5"
      style="width: 24px; height: 24px;"
    />
    <textarea
      aria-describedby="validation-hint_8"
      class="circuit-6"
      id="input_7"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with a suffix when passed the suffix prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-right: 48px;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-6 {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_11"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_12"
      class="circuit-5"
      id="input_11"
    />
    <div
      class="circuit-6"
      style="width: 24px; height: 24px;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with default styles 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_3"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_4"
      class="circuit-5"
      id="input_3"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with disabled styled when passed the disabled prop 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_35"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_36"
      class="circuit-5"
      disabled=""
      id="input_35"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with invalid styles when passed the invalid prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #DE331D;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:not(:focus)::-webkit-input-placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:not(:focus)::-moz-placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:not(:focus):-ms-input-placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:not(:focus)::placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #DE331D;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #DE331D;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_23"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_24"
      aria-invalid="true"
      class="circuit-5"
      id="input_23"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with readonly styles when passed the readonly prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_31"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_32"
      class="circuit-5"
      id="input_31"
      readonly=""
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with valid styles when passed the showValid prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_27"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_28"
      class="circuit-5"
      id="input_27"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #F5A720;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:not(:focus)::-webkit-input-placeholder {
  color: #F5A720;
}

.circuit-5:not(:focus)::-moz-placeholder {
  color: #F5A720;
}

.circuit-5:not(:focus):-ms-input-placeholder {
  color: #F5A720;
}

.circuit-5:not(:focus)::placeholder {
  color: #F5A720;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #AD7A14;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #F5A720;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #F5A720;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_19"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_20"
      class="circuit-5"
      id="input_19"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea should render without rows props when passed if rows is auto 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_51"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <textarea
      aria-describedby="validation-hint_52"
      class="circuit-5"
      id="input_51"
      style="resize: none; overflow-y: hidden; height: auto;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;
